_assets/stylesheets/brewhouse.css.scss
/* ... */
// Bootstrap Overrides:
.container,
.container-fluid {
  padding-left: 0;
  padding-right: 0;
}
div.main {
  background: #fff;
  overflow: hidden;
  position: relative;
}
.main {
  @media screen and (min-width: 768px) and (max-width: 1280px) {
    width: 100%;
  }
}

#banner {
  padding-top: 110px;
  padding-bottom: 130px;
  margin: 0 auto;
  max-width: 1280px;

  img.img-responsive {
    margin: 0 auto;
  }

  h1 {
    color: #263646;
    font-family: 'bh_proxima', sans-serif;
    font-weight: 300;
    font-size: 45px;
    letter-spacing: 2px;
    margin: 0 auto 20px;

    a {
      color: #263646;

      &:hover {
        color: #263646;
      }
    }
  }

  h2, .learn-more {
    text-transform: uppercase;
  }

  h2 {
    background: #FF6813;
    background: rgb(255, 104, 19);
    color: #FFE296;
    font-size: 19px;
    height: 55px;
    letter-spacing: 1px;
    margin: 0 auto;
    padding: 9px 5px 6px;
    position: relative;

    a {
      color: #F8DCC9;

      &:hover {
        color: #fff;
      }
    }

    @media (max-width: 768px) {
      font-size: 18px;
      height: auto;
      padding: 9px 15px 6px;
    }
    @media (min-width: 768px) {
      font-size: 23px;
      padding-top: 17px;
    }
    @media (min-width: 850px) {
      font-size: 26px;
      padding-top: 16px;
    }
    @media (min-width: 1170px) {
      font-size: 34px;
      padding-top: 11px;
    }

    .arrow-tip-container {
      display: block;
      height: 55px;
      overflow: hidden;
      position: absolute;
      top: 0px;
      right: -55px;
      width: 55px;
    }
    .arrow-tip {
      -webkit-transform: rotate(45deg) skew(10deg, 10deg);

      display: block;
      height: 55px;
      margin: 0 0 0 -39px;
      width: 55px;
    }
    .arrow-tip-grad {
      background: #FF6813;
      background: rgb(255, 104, 19);
      display: block;
      width: 100%;
      height: 100%;
    }
  }
  em {
    color: #fff;
    font-style: normal;
  }
}
.sub-heading {
  margin-top: 15px;
  color: #222;
  line-height: 1.5em;
  margin: 25px auto;

  @media (min-width: 770px) {
    font-size: 20px;
    width: 77%;
  }
}
.learn-more {
  color: #ccc;
  display: block;
  font-size: 13px;
  margin: 20px 0;
  letter-spacing: 0.05em;
  text-transform: uppercase;
}

// time-lapse
.team-video {
  @media (max-width: 750px) {
    display: none;
  }
}

img.team-photo {
  @media (min-width: 751px) {
    display: none;
  }
}

.content {
  margin: 100px auto;
  width: 80%;

  @media (max-width: 500px) {
    margin: 65px auto 55px auto;
  }
}
.content--extra-push {
  margin-bottom: 100px;
  margin-top: 250px;

  @media (max-width: 500px) {
    margin: 85px auto 45px auto;
  }
}

#community .row {
  margin-top: 15px;
}


@media screen and (min-width: 768px) {
  .img-full-width img {
    min-width: 100%;
  }
}
// Hack for small screen sizes to show taller shots
@media (max-width: 767px) {
  .img-full-width {
    width: 200%;
    margin-left: -50%;
  }
  #community .img-full-width {
    margin-left: -6%;
  }
}

.icon-black-circle {
  background: #28292B;
  border-radius: 100px;
  height: 75px;
  margin-bottom: 20px;
  padding: 13px;
  width: 75px;
}
.icon-black-circle-network {
  padding-left: 15px;
  padding-top: 15px;
}

#team {
  .team-member {
    margin: 20px -15px 30px;
  }
  .team-member-name {
    display: block;
    font-size: 23px;
    margin: 10px auto 15px;
    color: #41330C;

    @media (max-width: 782px) {
      font-size: 18px;
    }
  }
  .team-member-name small {
    color: #b0b0b0;
    display: block;
    font-size: 17px;

    @media (max-width: 782px) {
      font-size: 15px;
    }
  }
  .social-buttons {
    display: inline;
    font-size: 24px;

    @media (max-width: 782px) {
      display: inline-block;
      position: relative;
      float: right;
    }
  }
  .bio p {
    margin-bottom: 15px;
  }
}

#services {
  h4 {
    margin-bottom: 10px;
  }
}

#projects {
  ul {
    color: #999;
    list-style: none;
    margin: 20px 0 20px 0;
    padding-left: 0;

    li {
      background: transparent url(/images/chemex-small.png) no-repeat scroll left center;
      margin-bottom: 6px;
      padding-top: 1px;
      text-indent: 18px;
    }
  }

  .client-logos {
    margin-top: 30px;

    div.client-logo {
      padding-top: 28px;
      height: 120px;
      margin-bottom: 30px;
    }
    img#medeo-logo {
      padding-top: 16px;
    }
    img#perch-logo {
      padding-top: 12px;
    }
    img#go-free-range-logo {
      margin-top: -16px;
    }
    img#steamclock-logo {
      margin-top: 10px;
    }
  }

  .project {
    padding: 20px;
  }

  .project-logo {
    display: block;
    height: 60px;
    vertical-align: middle;

    img {
      height: 30px;
    }

    img#goobits-logo {
      height: 30px;
    }

    img#caliper-logo {
      height: 32px;
    }

    img#yciitu-logo {
      height: 38px;
    }

    img#contractually-logo {
      height: 42px;
    }

    img#commandwear-logo {
      height: 42px;
    }

    img#blacktusk-logo {
      height: 42px;
    }

    @media (max-width: 767px) {
      height: auto;
      margin-bottom: 10px;
    }
  }
}

#privacy-policy-section {
  padding:80px 0;
  h2 {
    font-size: 24px;
  }
  p {
    line-height: 1.7em;
  }
}


.map {
  background: #2F2D2C url("/images/ye-olde-vancouver.jpg") no-repeat scroll center top;
  height: 449px;
  padding: 0;
  margin: 0;
}

.map-inner {
  width: 89%;
}

.contact-details {
  background-color: #fff;
  height: 449px;
  float: right;
  display: block;
  padding: 20px 30px;
  width: 230px;
}
.contact-details h4,
.contact-details address {
  color: #222;
}
/* ... */

